fix: handling duplicate entrys and null entrys while importing datas